fixed image for mobile and fix gap

--- a/style/style.css
+++ b/style/style.css
@@ -223,7 +223,6 @@ nav ul li a {
     display: grid;
     grid-template-rows: repeat(1, 1fr);
 
-    gap: 28px;
 }
 
 .img-one {
@@ -489,6 +488,10 @@ footer>section>div:nth-child(3) ul li a {
         /* width: 100%;
         max-width: 100%;
 padding: 30px; */
+    }
+
+    .img-coloum {
+        gap: 20px;
     }
 
     .img-one {
